--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
 * {
     margin: 0;
+    box-sizing: border-box;
+}
+
+.btn, .searchInput::placeholder {
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
 }
