--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -5,6 +5,10 @@
     padding: 0.75rem;
 }
 
+.tagLine {
+    margin-bottom: 0.5rem;
+}
+
 .searchInput {
     padding: 0.75rem;
     border: none;
@@ -30,11 +34,6 @@
 
 .searchInput::placeholder {
     color: #333;
-    font-family: 'Poppins', sans-serif;
-}
-
-.searchBtn, .libraryBtn {
-    font-family: 'Poppins', sans-serif;
 }
 
 /* MOBILE */ 
