Cleaned up code, left in the checkmark img for now though it does not work. Redeploy, write README and submit.

--- a/client/src/components/BookCard/style.css
+++ b/client/src/components/BookCard/style.css
@@ -37,12 +37,14 @@
 }
 
 .check {
-    /* display: none; */
-    visibility: hidden;
     margin-left: 1rem;
     margin-bottom: -0.7rem;
 }
 
-.showCheck {
+.hide {
+    visibility: hidden;
+}
+
+.show {
     visibility: visible;
 }
