--- a/client/src/components/SearchView/style.css
+++ b/client/src/components/SearchView/style.css
@@ -1,23 +1,30 @@
-/* SEARCHVIEW */ 
+/* SEARCHVIEW */
 .container {
-    margin: 2rem auto;
-    max-width: 80%;
-    max-height: 80%;
-    background-color: #fff;
-    border: 1px solid #333;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.15rem 0.25rem;
+  margin: 2rem auto;
+  max-width: 80%;
+  max-height: 80%;
+  background-color: #fff;
+  border: 1px solid #333;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.15rem 0.25rem;
 }
 
 .results {
-    text-align: center;
-    margin: 1rem;
+  text-align: center;
+  margin: 1rem;
 }
 
 h3 {
-    display: inline-block;
+  display: inline-block;
 }
 
-.foundBooks {
-    margin: 1rem;
+.noBooks {
+  padding: 1rem;
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 95%;
+    max-height: 95%;
+  }
 }
